# chip_8_rs

./: .gitignore  Cargo.toml  Makefile  README.md
src/: engine.rs  font.rs  instructions.rs  lib.rs  main.rs  program_counter.rs
src_web/: handler.js  handler.ts  index.html  server.py
