[package]
name = "chip_8_rs"
version = "0.1.0"
authors = ["tomGER <github@tomger.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = {version = "0.8.3"}
getrandom = { version = "0.2", features = ["js"] }